# Melosty

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  Main.qml  Makefile  Melosty  Melosty.cpp  Melosty.files  Melosty.h  README.md  cmake_install.cmake  glad.c  imgui.ini  main.cpp
.github/workflows/: cmake-multi-platform.yml
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Melosty.config.BC45C1B07F476F07.idx  main.cpp.478F866E1EA48FDF.idx
include/glad/: glad.h
src/: main.cpp
